<resources>
    <string name="app_name">Music LMS</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
...
    <string name="to_do_item__form__require_recording">Enable Recording</string>
    <string name="form__edit_button">Edit</string>
    <string name="user_profile_chat">Chat</string>
    <string name="form__delete_button">Delete</string>
    <string name="assignment__overview__user_label">Assignee</string>
    <string name="title_activity_user_search">Search for Users</string>
    <string name="title_activity_add_users">Add Users</string>
    <string name="title_activity_chat_landing">Chat with others</string>
    <string name="title_activity_user_main_profile">User Profile</string>
    <string name="title_activity_login">Log In</string>
    <string name="text_content">text</string>
    <string name="action_Language">Language</string>
    <string name="assignment__form__view_todos">To Do</string>
    <string name="form__view_button">View</string>
    <string name="title_activity_assignment_view">View Assignment</string>
...
    <string name="add_recording_feedback__text">Add feedback text</string>
    <string name="hello">hello</string>
    <string name="please_add_comment">Please enter your comment</string>
    <string name="comment">comment</string>
    <string name="Write_a_message">Write a message...</string>
    <string name="user_name">Name</string>
    <string name="Add_New_Users">Add new users</string>
    <string name="Name_">Name:</string>
    <string name="Email_">Email:</string>
    <string name="Role_">Role:</string>
    <string name="Add">Add</string>
    <string name="Type_a_message">Type a message...</string>
    <string name="Send">Send</string>
...
    <string name="or_Register_an_account_here">or Register an account here</string>
    <string name="Preferred_Name">Preferred Name</string>
    <string name="Hi">Hi, I am ...</string>
    <string name="Teacher">Teacher</string>
    <string name="Student">Student</string>
    <string name="Select_Role">Select A Role To Continue</string>
    <string name="have_account">Already have an account? Login here</string>
    <string name="experience">I have experience ...</string>
    <string name="Sending">Sending a text message</string>
    <string name="Phone">Making a Phone call</string>
    <string name="Zoom">Joining a Zoom call</string>
    <string name="Schedule_Zoom">Schedule a Zoom call</string>
    <string name="Watching_YouTube">Watching a YouTube video</string>
    <string name="Uploading_YouTube">Uploading a YouTube video</string>
    <string name="Finish">Finish</string>
    <string name="Logout">Logout</string>
    <string name="user_preferred_name">Preferred Name</string>
    <string name="user_hi_i_am">Hi, I am ...</string>
    <string name="user_signup_email">Your email (or your parents)</string>
    <string name="user_signup_password">Password</string>
    <string name="user_signup_teacher">Teacher</string>
    <string name="user_signup_student">Student</string>
...
