...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/searchEmail"
            app:layout_constraintTop_toBottomOf="@+id/searchName" />

        <LinearLayout
            android:id="@+id/actionsButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchRole"
            android:orientation="horizontal"
...
                android:layout_marginStart="16dp"
                android:layout_marginVertical="12dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/view" />

            <Button
                android:id="@+id/searchAdd"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginStart="16dp"
...
