<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/common_google_signin_btn_text_dark_disabled"
    tools:context=".SignUp">

...
                    android:id="@+id/signup_student"
                    android:layout_width="140dp"
                    android:layout_height="56dp"
                    android:background="@color/orangePrimary"
                    android:text="@string/user_signup_student"
                    android:textColor="#fff"
                    app:layout_constraintBottom_toTopOf="@+id/toSignIn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.797"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintVertical_bias="0.306" />
            </LinearLayout>
...
